created basic form with label,text and password input

--- a/main.css
+++ b/main.css
@@ -12,3 +12,7 @@ table tr,th,td,caption{
     border-collapse: collapse;
     padding: 0.5rem;
 }
+address {
+    font-size: 12px;
+    padding-left: 40px;
+}
